# Core

./: CMakeLists.txt
Headers/: CMakeLists.txt
Headers/Core/: Core.h  JSON.h  System.h
Tests/: CMakeLists.txt  JSONTest.cpp
Tests/Core/: SystemTest.cpp
cmake/: CoreConfig.cmake
